<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/search_view"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchActivity">
    
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">
        <EditText
                android:id="@+id/search_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:layout_weight="0.5" />
        <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_weight="0.5" />
    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>